feat: add solutions to lc problem: No.0417 (#4764)